0.5

- New Installer (first time run installs a basic SnipSnap applicaton)
- Fixed Bug: cyclic dependency temp. fixed for component loading
- Added Feature: Snips can be displayed as RDF
- Developer: Added interfaces for XML-RPC webservices (MetaWeblog, ...) and stuffed this in Pico
- Developer: Moved more stuff to Pico
- Added Feature: Support for NameFormatters to change the look of snip names (like capitalize etc.)
- Added Label: RenderEngineLabel allows to set a different engine for a snip
- Fixed bug: display login warning instead of edit field when snip auto-create is on
- Fixed bug: attachment download working with deep namespace now
- Added Feature: RenderEngineLabel to change rendering of content
- Added Feature: /robots.txt editable via Snip
- Added Feature: moved configuration settings into SnipSpace
- Added Feature: Installer for WAR (w/ Localization)
- Developer: Added support for PicoContainer
- Added feature: moved some messages to messages_en.properties for language packs
- Added feature: target=... in image macro {image}
- Added feature: parameter for Mail-To-Blog POP3 polling (app.mail.pop3.interval in minutes)
- Added feature: instead of snip-notfound SnipSnap can now display a create page (see app.perm.createSnips)
- Added feature: some basic labels
- Added feature: path is show for snips with namespaces, e.g. SnipSnap > developer > stephan
- Added feature: blog posts are now namespaces e.g. start/2003-06-02
- Added feature: made snip names slash '/' insensitive
- Fixed bug: links and images no longer contain complete URLs
- Fixed bug: Reworked URL detection
- Developer: completely reorganized Configuration (macros need recompile!)
- Developer: separated Server and AppConfiguration
- Developer: JSP precompilation switch (build.properties)
- Added feature: Label support (Carsten Pfeiffer, Marco Mosconi)
- Added feature: Support for nested lists (Davar)
- Fixed bug: commenting order beyond 10 was wrong